engine-net-2/examples/Errors/TypeMismatch.grs
new graph "Rules.grg"

exec { add(E) }

quit
